--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-  box-sizing: border-box;
+  box-sizing: border-box; /** causes the boxes to not expand */
 }
 
 body {
@@ -36,11 +36,30 @@ nav a[aria-current='page'] {
   background-color: #d4d4d4;
 }
 
-main {
-  padding: 1rem;
-}
 
 h1 {
   font-weight: bold;
   font-size: 1.5rem;
+}
+
+main {
+  padding: 1rem;
+}
+
+main :nth-child(2) {
+  background-color: brown;
+  width: 100px;
+  height: 100px;
+  padding: 10px;
+  border: 20px black solid;
+  margin: 20px;
+}
+
+main :nth-last-child(1) {
+  background-color: aqua;
+  width: 100px;
+  height: 100px;
+  padding: 20px;
+  margin: 20px;
+
 }
